--- a/NtierSolid/BLL/BLL.csproj
+++ b/NtierSolid/BLL/BLL.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interface\ICRUD.cs" />
+    <Compile Include="Interface\ILIST.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AdminService.cs" />
     <Compile Include="Services\AppUserService.cs" />
