--- a/NtierSolid/DataAccess/DataAccess.csproj
+++ b/NtierSolid/DataAccess/DataAccess.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Context\ProjectContext.cs" />
     <Compile Include="Entity\AppUser.cs" />
+    <Compile Include="Entity\BaseEntity.cs" />
     <Compile Include="Entity\Category.cs" />
     <Compile Include="Entity\Product.cs" />
     <Compile Include="Migrations\Configuration.cs" />
