--- a/MVC_Northwind/MVC_Northwind/MVC_Northwind.csproj
+++ b/MVC_Northwind/MVC_Northwind/MVC_Northwind.csproj
@@ -131,9 +131,12 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Filter\AuthFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AppUser.cs" />
     <Compile Include="Models\Category.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -205,6 +208,7 @@
     <Content Include="Views\Home\CustomerDetaylari.cshtml" />
     <Content Include="Views\Home\OrderDetaylari.cshtml" />
     <Content Include="Views\Home\AddCustomer.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
